<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="score_board">Score board</string>
    <string name="try_again">Try again</string>
    <string name="new_game">NEW GAME</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="themes">THEMES</string>
    <string name="player_1">Player 1</string>
    <string name="first_player">First Player</string>
    <string name="player_2">Player 2</string>
    <string name="second_player">Second Player</string>
    <string name="start_game">Start Game</string>
    <string name="zero">0</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_or_nikname">Email or Nikname</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or_register_here">Or Register Here</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_notes">My Notes</string>
    <string name="email">Email</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="go_back_to_log_in_page">Go back to log in page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online_game">Online Game</string>
    <string name="local_game">Local Game</string>
    <string name="GameModeFragment">Game Mode Fragment</string>
    <string name="OfflinePlayerFragment">Offline Player Fragment</string>
    <string name="title_activity_new_c_p_u_game">You VS Android</string>
    <string name="you">You</string>
    <string name="android">Android</string>
    <string name="LogInToOnlineGameFragment">Log In To Online Game Fragment</string>
    <string name="your_name">Your Name</string>
    <string name="StarGameOnlineMultiPlayerFragment">Star Game Online MultiPlayer Fragment</string>
    <string name="todo">TODO</string>
    <string name="incorrect_request">Incorrect Request</string>
    <string name="active_now">Active Now</string>
    <string name="online_players">Online Players</string>
    <string name="log_out">Log out</string>
    <string name="active_logo">active_logo</string>
    <string name="online_player">Online Player</string>
    <string name="first_logo">active_logo</string>
    <string name="second_logo">second_logo</string>
    <string name="constraint">Already chosen by your opponent</string>
    <string name="vs">vs</string>
    <string name="name">Name</string>
    <string name="developed_by_edo_and_ikakooo">Developed By Edo and Ikakooo</string>
    <string name="save">Save</string>

</resources>