<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.multiPlayer.local.StarGameLocalMultiPlayerFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_second2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fist_player_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/todo"
            android:hint="@string/first_player"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:text="@string/player_1"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textview_second"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second2">

        <EditText
            android:id="@+id/second_player_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/todo"
            android:hint="@string/second_player"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:text="@string/player_2"
            android:textSize="25sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second2" />
</androidx.constraintlayout.widget.ConstraintLayout>