<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <EditText
        android:id="@+id/LogInEmailEditTextsID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_email_42"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLength="128"
        android:paddingStart="15sp"
        android:selectAllOnFocus="true"
        android:shadowColor="#FFFFFF"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/LogInPasswordEditTextsID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_42"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="64"
        android:paddingStart="15sp"
        android:selectAllOnFocus="true"
        android:shadowColor="#FFFFFF"
        android:text=""
        android:textColor="#000000"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/LogInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/log_in"
        android:background="@drawable/rounded_button_notes"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/RegisterTextViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="end"
        android:paddingEnd="30sp"
        android:text="@string/or_register_here"
        android:textColor="#46FA15"
        tools:ignore="RtlSymmetry" />


</LinearLayout>