<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.newgame.HardGameModeFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="vertical">

        <TableRow
            android:gravity="center"
            android:padding="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/score_board"
                android:textColor="#0ff"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/you"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/you_score"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:background="#fff"
                android:enabled="false"
                android:padding="5dp"
                android:text="@string/zero"
                android:textColor="#000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/android"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/android_score"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_column="1"
                android:background="#fff"
                android:enabled="false"
                android:padding="5dp"
                android:text="@string/zero"
                android:textColor="#000"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>


    <LinearLayout
        android:id="@+id/first_row_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/offline_button_00"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/offline_button_01"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/offline_button_02"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/offline_button_10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/offline_button_11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/offline_button_12"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/offline_button_20"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/offline_button_21"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"

            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/offline_button_22"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/custom_button"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <Button
        android:id="@+id/offline_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/try_again"
        android:textColor="@color/white" />

</LinearLayout>